#8374 class.newInstance has been deprecated, all references transformed
#8374  The java method class.newIstance has been deprecated, according to java official documentation:
The call
 clazz.newInstance() can be replaced by  clazz.getDeclaredConstructor().newInstance()
exceptions have been added to the method signature when appropiate