@@ -79,7 +79,7 @@ public class TestLoadNativeLibFromNar extends AbstractTestNarLoader {
 
             Object actualJniMethodReturnValue = TestJNI
                     .getMethod("testJniMethod")
-                    .invoke(TestJNI.newInstance());
+                    .invoke(TestJNI.getDeclaredConstructor().newInstance());
 
             assertEquals("calledNativeTestJniMethod", actualJniMethodReturnValue);
         }
@@ -121,7 +121,7 @@ public class TestLoadNativeLibFromNar extends AbstractTestNarLoader {
 
             Object actualJniMethodReturnValue = TestJNI
                     .getMethod("testJniMethod")
-                    .invoke(TestJNI.newInstance());
+                    .invoke(TestJNI.getDeclaredConstructor().newInstance());
 
             assertThat(actualLibraryLocation, containsString(instanceClassLoader.getIdentifier()));
             assertEquals("calledNativeTestJniMethod", actualJniMethodReturnValue);
