@@ -40,7 +40,7 @@ public final class Utils {
     static <T> T newDefaultInstance(String className) {
         try {
             Class<T> clazz = (Class<T>) Class.forName(className, false, Thread.currentThread().getContextClassLoader());
-            return clazz.newInstance();
+            return clazz.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             throw new IllegalStateException("Failed to load and/or instantiate class '" + className + "'", e);
         }
